--- a/fs-api/src/main/resources/application-dev.properties
+++ b/fs-api/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 #datasource mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.31.102:3306/voice9?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.110.84:3306/voice9?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=123456
 
 #datasource postgresql
 #spring.datasource.driver-class-name=org.postgresql.Driver
@@ -26,7 +26,7 @@ spring.datasource.password=12345678
 
 
 # 文件存储(内网地址)
-voice9.minio.endpoint=http://192.168.31.102:9000
+voice9.minio.endpoint=http://localhost:9000
 voice9.minio.access.key=admin
 voice9.minio.secret.key=12345678
 
@@ -34,19 +34,19 @@ voice9.minio.secret.key=12345678
 voice9.minio.server=https://dev.voice9.com
 
 #redis
-spring.redis.host=192.168.31.102
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=12345678
+spring.redis.password=
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-wait=-1ms
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=2
 
 # rabbitmq
-spring.rabbitmq.host=192.168.31.102
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=12345678
+spring.rabbitmq.password=123456
 spring.rabbitmq.virtual-host=/
 
 #logger
