--- a/fs-api/src/main/resources/bootstrap.properties
+++ b/fs-api/src/main/resources/bootstrap.properties
@@ -3,12 +3,13 @@ spring.application.name=fs-api
 spring.application.group=cc-a
 spring.instance.id=${random.int(2000,3000)}
 server.port=7200
+spring.profiles.active=dev
 server.servlet.context-path=/fs-api
 
 ## nacos 注册配置中心
-spring.cloud.nacos.server-addr=192.168.31.102:8848
+spring.cloud.nacos.server-addr=192.168.110.84:8848
 # 当前注册服务的注册地址(k8s部署时需要注释掉)
-spring.cloud.nacos.discovery.ip=192.168.31.102
+spring.cloud.nacos.discovery.ip=127.0.0.1
 spring.cloud.nacos.config.group=${spring.application.group}
 spring.cloud.nacos.config.name=${spring.application.name}
 spring.cloud.nacos.discovery.metadata.appId=${spring.application.name}
